# automated-email-companion-with-mcp-aws-integration

./: .gitattributes  .gitignore  README.md  senario.txt
mcp1_gmail_extractor/: mcp1_server.py  pyproject.toml
mcp2_summarizer/: import_test.py  main.py  mcp2_server.py  post_test.py  pyproject.toml
resources/: data.json  summary.json
scripts/: start_all.ps1  start_mcp1.ps1  start_mcp2.ps1
