[project]
name = "mcp2-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.16.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "youtube-search-python>=1.6.6",
]
